feat(backend): 实现完整的聊天API接口和文档
refactor: 重构后端架构，优化模型加载和推理逻辑

docs: 添加详细的项目架构设计文档和使用说明

test: 添加聊天接口的测试用例和测试脚本

chore: 更新依赖和配置，添加启动脚本

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
 fastapi
-uvicorn
-transformers
-torch
-pydantic
-prometheus-client
+ uvicorn
+ transformers
+ torch
+ pydantic>=2.0.0
+ prometheus-client
